syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/timestamp.proto";

option (scalapb.options) = {
  package_name: "c.user.domain.proto"
  import: "c.user.domain.proto._"
  flat_package: true
};

message Address {
    string street = 1;
    string number = 2;
    string zip = 3;
    string city = 4;
    string state = 5;
    string country = 6;
}

message User {
    string id = 1 [(scalapb.field).type = "c.user.domain.UserEntity.UserId"];
    string username = 2;
    string email = 3;
    string pass = 4;
    Address address = 5;
}


message UserCreatedEvent {

    option (scalapb.message).extends = "c.user.domain.UserEntity.UserEvent";

    string entityId = 1 [(scalapb.field).type = "c.user.domain.UserEntity.UserId"];
    string username = 2;
    string email = 3;
    string pass = 4;
    Address address = 5;
    google.protobuf.Timestamp timestamp = 6 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}


message UserRemovedEvent {

    option (scalapb.message).extends = "c.user.domain.UserEntity.UserEvent";

    string entityId = 1 [(scalapb.field).type = "c.user.domain.UserEntity.UserId"];
    google.protobuf.Timestamp timestamp = 2 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}

message UserAddressChangedEvent {

    option (scalapb.message).extends = "c.user.domain.UserEntity.UserEvent";

    string entityId = 1 [(scalapb.field).type = "c.user.domain.UserEntity.UserId"];
    Address address = 2;
    google.protobuf.Timestamp timestamp = 3 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}

message UserPasswordChangedEvent {

    option (scalapb.message).extends = "c.user.domain.UserEntity.UserEvent";

    string entityId = 1 [(scalapb.field).type = "c.user.domain.UserEntity.UserId"];
    string pass = 2;
    google.protobuf.Timestamp timestamp = 3 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}

message UserEmailChangedEvent {

    option (scalapb.message).extends = "c.user.domain.UserEntity.UserEvent";

    string entityId = 1 [(scalapb.field).type = "c.user.domain.UserEntity.UserId"];
    string email = 2;
    google.protobuf.Timestamp timestamp = 3 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
}
